  * doc/*, man/*: switch all smarden.org http links to https.
  * alloc.h, buffer.c, buffer.h, buffer_get.c, buffer_put.c, buffer_write.c,
    byte.h, check-udpsvd.c, ipsvd_phcc.c, pathexec_env.c, select.h1,
    select.h2, sig.c, sig.h, sig_catch.c, socket_bind.c, socket_conn.c,
    tcpsvd.c, tcpsvd.dist, udpsvd.c, udpsvd.dist, wait.h: fix build with
    gcc15: in C23 f() means f(void), consequently signal handler functions
    now are f(int), alloc_free() and byte_zero() parameters need casts,
    buffer_unixwrite() removes "const" from parameter.
  * src/Makefile: target check depends on target default now.
  * doc/index.html: remove reference to mailing list misc@list.smarden.org.
  * doc/index.html: add reference to repository on github.com.
  * doc/install.html: put back installation step removed by mistake.

ipsvd 1.1.0
Wed, 16 Oct 2024 20:36:33 +0000
  * doc/benefits.html, doc/examples.html. doc/index.html,
    doc/install.html: remove references to sslio, sslsvd.
  * man/ipsvd-cdb.8, man/ipsvd-instruct.5, man/ipsvd.7, man/tcpsvd.8,
    man/udpsvd.8: remove references to sslio.8, sslsvd.8.
  * man/sslio.8, man/sslsvd.8: remove; obsolete.
  * tcpsvd.c, tcpsvd.dist: remove sslsvd code; obsolete.
  * *ssl*: remove; obsolete.
  * Makefile, TARGETS, check-dist, package/compile, package/upgrade:
    remove support for matrixssl; no longer build sslio, sslsvd programs.
  * doc/upgrade.html: typo.
  * tcpsvd.c, udpsvd.c: print proper group id when verbose.
  * doc/install.html: add link to sha256sum.asc.
  * doc/install.html: change mail address.
  * debian/: remove; obsolete.
  * cdb_make.c, pathexec.h, pathexec_env.c, pathexec_run.c, seek_set.c,
    sgetopt.c, sgetopt.h, subgetopt.c, subgetopt.h, tcpsvd.c, trycpp.c,
    tryflock.c, trypoll.c, trysgact.c, trysgprm.c, tryulong64.c,
    trywaitp.c, udpsvd.c, x86cpuid.c: incorporate lib changes from
    runit-2.2.0 and adapt ipsvd programs to properly build with modern
    toolchains (thx Gentoo, Debian, Void Linux).