@@ -33,7 +33,7 @@ through other programs and the administrator.
 The filesystem's file and directory permissions can be used to grant and
 restrict access to the configuration.
 For mostly static instructions, an instructions directory can be compiled
-into a <a href="http://cr.yp.to/cdb.html">constant data base</a> for faster
+into a <a href="https://cr.yp.to/cdb.html">constant data base</a> for faster
 lookup.
 <p>
 Based on <i>ipsvd</i>'s client-based
@@ -54,8 +54,8 @@ The <i>ipsvd</i> programs use the
 <a href="https://smarden.org/pape/djb/">djbdns client library</a>
 to query the DNS.
 This DNS client library is known to be
-<a href="http://cr.yp.to/djbdns/res-disaster.html">secure</a> yet very
-<a href="http://cr.yp.to/djbdns/qualify.html">convenient</a>.
+<a href="https://cr.yp.to/djbdns/res-disaster.html">secure</a> yet very
+<a href="https://cr.yp.to/djbdns/qualify.html">convenient</a>.
 <hr>
 <a name="runit"><h3>Reliable service management and logging</h3></a>
 The daemons provided by the <i>ipsvd</i> package normally are run by a
