@@ -40,8 +40,8 @@ a connection, or set a per host concurrency limit.
 Normally the <i>ipsv</i> daemons are run by a supervisor process, such as
 <a href="https://smarden.org/runit/runsv.8.html">runsv</a> from the
 <a href="https://smarden.org/runit/">runit</a> package, or
-<a href="http://cr.yp.to/daemontools/supervise.html">supervise</a> from the
-<a href="http://cr.yp.to/daemontools.html">daemontools</a> package.
+<a href="https://cr.yp.to/daemontools/supervise.html">supervise</a> from the
+<a href="https://cr.yp.to/daemontools.html">daemontools</a> package.
 <p>
 <i>ipsvd</i> can be used to run services normally run by <i>inetd</i>,
 <i>xinetd</i>, or <i>tcpserver</i>.
@@ -55,7 +55,7 @@ Related links:
 <li><a href="http://www.freshports.org/net/ipsvd/">ipsvd FreeBSD port</a>
 <li><a href="http://www.xinetd.org/">xinetd</a>
 <li>inetd
-<li><a href="http://cr.yp.to/ucspi-tcp.html">ucspi-tcp</a>
+<li><a href="https://cr.yp.to/ucspi-tcp.html">ucspi-tcp</a>
 <li><a href="http://netcat.sourceforge.net/">netcat</a>
 </ul>
 <hr>
