@@ -10,7 +10,7 @@
 <h1>ipsvd - installation</h1>
 <hr>
 <i>ipsvd</i> installs into
-<a href="http://cr.yp.to/slashpackage.html">/package</a>.
+<a href="https://cr.yp.to/slashpackage.html">/package</a>.
 If you don't have a <tt>/package</tt> directory, create it now:
 <pre>
  # mkdir -p /package
